# sphinx-linenos-emphasize-lines-bug

./: README.md  setup.cfg
source/: conf.py
