[metadata]
name = sphinx-linenos-emphasize-lines-bug
version = 1.3.0
description = Small example repository to show that the code block breaks when both :linenos: and :emphasize-lines: are used.
author = Rick Staa
author_email = rick.staa@outlook.com
url= https://github.com/rickstaa/sphinx-linenos-emphasize-lines-bug
license = Rick Staa copyright
classifiers =
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering"

[options]
include_package_data = True
install_requires =
    docutils
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    myst_parser
python_requires = >=3.6
packages=find_namespace:
